--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ h2 {
     will-change: transform;
     background: white;
     border-radius: 10px;
-    display: flex;
+    /* display: flex; */
     overflow: hidden;
     box-shadow: 0 25px 50px -12px hsla(265.3, 20%, 10%, 35%);
     transform-origin: center top;
@@ -509,7 +509,7 @@ h2 {
 }
 
 .ocard-image-container {
-    display: flex;
+    /* display: flex; */
     max-width: none;
     height: auto; 
     overflow: hidden; 
@@ -517,7 +517,7 @@ h2 {
 }
 
 .ocard-image {
-    max-width: 100%;
+    width: 100%;
     height: 100%; 
     object-fit: cover; 
     aspect-ratio: 1.7;
