--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ main {
 
 .site-footer .eyebrow {
     font-family: var(--font-body);
-    font-size: 30px;
+    font-size: 15px;
     text-transform: uppercase;
     padding-bottom: 1em;
 }
@@ -420,6 +420,7 @@ section {
     color: rgba(28, 61, 128, 0.8);
     text-align: left;
     padding: 8em 4em;
+    margin-bottom: 8em;
 }
 
 .hero h2 {
@@ -534,79 +535,6 @@ h2 {
     font-size: 30px;
 }
 
-/* OVERLAPPING CARDS */
-.overlapping-cards {
-    width: 100%;
-    /* max-width: 1450px; */
-    margin: 0 auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    /* border: 1.5px solid red; */
-    display: grid;
-    /* grid-template-rows: repeat(var(--cards-count), var(--card-height)); */
-    gap: 10px; /* adds space between rows */
-}
-
-/* Adjust gap when stacking cards */
-/* @media (max-width: 768px) {
-    .overlapping-cards {
-    grid-template-rows: auto; 
-    gap: 10px; 
-    }
-} */
-
-.ocard {
-    position: sticky;
-    top: 0;
-    bottom: 4;
-    z-index: 10;
-    /* margin-bottom: 0.5px; */
-}
-
-.inner-ocard {
-    will-change: transform;
-    background: white;
-    border-radius: 10px;
-    /* display: flex; */
-    overflow: hidden;
-    box-shadow: 0 25px 50px -12px hsla(265.3, 20%, 10%, 35%);
-    transform-origin: center top;
-    height: 81%; 
-}
-
-.ocard-image-container {
-    /* display: flex; */
-    max-width: none;
-    height: auto; 
-    overflow: hidden; 
-    background-position: bottom;
-}
-
-.ocard-image {
-    width: 100%;
-    height: 100%; 
-    object-fit: cover; 
-    aspect-ratio: 1.7;
-}
-
-.project-name {
-    position: absolute;
-    bottom: -100%;
-    left: 50%; 
-    transform: translateX(-50%); 
-    padding: 10px;
-    background-color: transparent;
-    color: white;
-    font-size: 4em;
-    font-weight: bold;
-    transition: none;
-}
-
-.ocard:hover .project-name {
-    bottom: 20px; 
-    transform: translateX(-50%) translateY(-50%); 
-}
-
 /* WORKS SECTION */
 .works-heading {
     color: rgb(0, 0, 0);
@@ -618,33 +546,37 @@ h2 {
 }
 
 
-
   /* WORKS GRID CONTAINER */
 .works-grid {
     display: grid;
     /* grid-template-columns: repeat(2, 1fr);  
     grid-template-rows: repeat(2, 1fr);  */
     grid-template-columns: repeat(2, 1fr);  
-    grid-template-rows: 1fr, 1fr; 
+    grid-template-rows: repeat(3, calc(50svh - 20px)); 
     gap: 20px;  
-    padding: 20px;
+    margin: 20px;
     /* border: 1.5px solid red; */
 }
+
+.works-full {
+    display: grid;
+    grid-template-columns: 1fr;  
+    grid-template-rows: calc(100svh - 20px); 
+    gap: 20px;  
+    margin: 20px;
+}
+
   /* WORKS GRID ITEMS */
 .works-project {
     background-color: var(--color-worksproject-background);
     color: var(--color-worksproject-altcolor);
-    position: relative; 
-    padding-top: 100%;  
+    position: relative;   
     text-align: center;
     border-radius: 8px;
     overflow: hidden;
 }
 
 .works-project img {
-    position: absolute; 
-    top: 0;
-    left: 0;
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
