--- a/css/style.css
+++ b/css/style.css
@@ -551,8 +551,10 @@ h2 {
     display: grid;
     /* grid-template-columns: repeat(2, 1fr);  
     grid-template-rows: repeat(2, 1fr);  */
+    /* grid-template-columns: repeat(2, 1fr);  
+    grid-template-rows: repeat(3, calc(50svh - 20px));  */
     grid-template-columns: repeat(2, 1fr);  
-    grid-template-rows: repeat(3, calc(50svh - 20px)); 
+    grid-template-rows: 1fr, 1fr 1fr; 
     gap: 20px;  
     margin: 20px;
     /* border: 1.5px solid red; */
@@ -560,23 +562,47 @@ h2 {
 
 .works-full {
     display: grid;
-    grid-template-columns: 1fr;  
-    grid-template-rows: calc(100svh - 20px); 
+    /* grid-template-columns: 1fr;   */
+    /* grid-template-rows: calc(100svh - 20px);  */
     gap: 20px;  
     margin: 20px;
+
 }
 
   /* WORKS GRID ITEMS */
 .works-project {
     background-color: var(--color-worksproject-background);
     color: var(--color-worksproject-altcolor);
-    position: relative;   
+    position: relative;
     text-align: center;
+    padding-top: 100%; 
     border-radius: 8px;
     overflow: hidden;
 }
 
+
 .works-project img {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+}
+
+.works-full {
+    background-color: var(--color-worksproject-background);
+    color: var(--color-worksproject-altcolor);
+    position: relative;
+    text-align: center;
+    padding-top: 50%; 
+    border-radius: 8px;
+    overflow: hidden;
+}
+.works-full img {
+    position: absolute; 
+    top: 0;
+    left: 0;
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
@@ -593,11 +619,29 @@ h2 {
     text-transform: uppercase;
     color: var(--color-worksproject-textcolor); 
 }
+
+.works-full p {
+    position: absolute;
+    bottom: 10px;
+    left: 10px; 
+    margin: 0;
+    opacity: 0; 
+    visibility: hidden; 
+    transition: opacity 0.3s ease, visibility 0s 0.3s; 
+    text-transform: uppercase;
+    color: var(--color-worksproject-textcolor); 
+}
 .works-project.light p {
     color: var(--color-text-headings-h4);
 }
 /* Show text on hover */
 .works-project:hover p {
+    opacity: 1; 
+    visibility: visible; 
+    transition: opacity 0.3s ease, visibility 0s 0s; 
+}
+
+.works-full:hover p {
     opacity: 1; 
     visibility: visible; 
     transition: opacity 0.3s ease, visibility 0s 0s; 
