--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,8 @@ p {
 
     /* NEW SCHOOL WIDOW SLAYER */
     text-wrap: pretty;
+    font-family: var(--font-body)
+
 }
 
 /* GLOBAL MEDIA */
@@ -293,12 +295,55 @@ main {
 }
 
 /* ABOUT */
-.about h2 {
-    text-align: center;
+
+.about h3 {
+    font-size: 1.2em;
 }
 
-.about p {
-    justify-content: center; 
+.about ul {
+    margin: 0;
+    padding: 0;
+}
+
+.about ul li {
+    margin-bottom: .8em;
+
+}
+
+.about li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.about .col-3 {
+    padding-right: 1.5em;
+}
+
+.col-8 h2 {
+    margin: 0;
+    line-height: .75;
+}
+
+
+.a-button {
+
+    border: 2px solid #b20e34;
+    border-radius: 4px;
+    color: rgb(0, 0, 0);
+    display: inline-block;
+    padding: 0.25em 1em;
+    margin: var(--unit-small) 0;
+    text-decoration: none;
+}
+
+.a-button a:-webkit-any-link {
+    color: black;
+}
+
+.res-date {
+    display: block;
+    font-size: .8em;
 }
 
 
@@ -357,7 +402,7 @@ main {
 .footer-pagenav li { 
     list-style: none;
     font-family: var(--font-body);
-    text-decoration: none;
+
 }
 
 .footer-socialnav,
@@ -386,6 +431,8 @@ a:-webkit-any-link {
     padding-top: 0em;
     font-family: var(--font-heading);
 }
+
+
 
 /* SOCIAL NAV */
 /* .social-nav ul {
@@ -939,11 +986,9 @@ h2 {
 .project-meta-list li {
     list-style: none;
     font-size: 1em;
+    margin-bottom: .5em;
 }
 
-li {
-    line-height: 2;
-}
 
 @media (min-width:768px) {
     .project-meta-list {
