--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ CSS TABLE OF CONTENTS
     --color-hero-text: rgb(255 255 255 / .8);
     --color-hero-headings: rgb(255 255 255 / 1);
 
-    --color-sitefooter-background: #ffd36d;
+    --color-sitefooter-background: #731d31;
     --color-sitefooter-text: rgb(255 255 255 / .8);
     --color-sitefooter-headings: rgb( 255 255 255 / 1);
     --color-sitefooter-links: rgb(255 255 255);
@@ -279,9 +279,9 @@ header a {
 /* STYLING FOR THE NAV  */
 
 /* SITE ID*/
-/* .site-id h1 {
+.site-id h1 {
     margin: 0;
-} */
+}
 
 /* SITE NAV */
 .site-nav ul {
