added two more html

--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ ul._line.hover-effect li {
 
 main {
     margin-bottom: 34em;
-    /* background-color: white; */
+    background-color: white;
 }
 
 /* FOOTER */
