--- a/css/style.css
+++ b/css/style.css
@@ -1018,7 +1018,7 @@ h2 {
     top: 0;
     left: 0; */
     width: 100%;
-    height: 100%;
+    height: auto;
     max-height: 95vh;
     object-fit: cover;
     object-position: center;
