--- a/css/style.css
+++ b/css/style.css
@@ -302,8 +302,8 @@ header a {
 .site-nav a::before,
 a.icon-hover::before {
     content: ""; 
-    background-image: url(../img/png/portfolio-logo.png);
-    width: 20px;
+    background-image: url(../img/png/flower-logo.png);
+    width: 18px;
     height: 1em;
     background-size: contain;
     display: inline-block;
@@ -359,9 +359,14 @@ main {
     padding-right: 1.5em;
 }
 
-.col-8 h2 {
-    margin: 0;
+.col-7 h2 {
+    margin: 2;
     line-height: .75;
+}
+
+.one-half h3 {
+font-weight: 600;
+
 }
 
 
@@ -371,9 +376,11 @@ main {
     border-radius: 4px;
     color: rgb(255, 255, 255);
     display: inline-block;
-    padding: 0.25em 1em;
+    padding: 0.75em 1.5em;
     margin: var(--unit-small) 0;
     text-decoration: none;
+    text-transform: uppercase;
+    font-size: .8em;
 }
 
 .a-button:hover {
@@ -502,7 +509,7 @@ ul._line.hover-effect li {
     font-weight: 100;
     /* font-size: 2em; */
     opacity: .4;
-    left: 0;
+    right: 0;
 
 }
 
@@ -889,8 +896,8 @@ h2 {
 /* Main project grid container */
 .project-grid {
     display: grid;
-    gap: 20px;
-    margin: 20px;
+    gap: 40px;
+    margin: 40px;
     grid-template-columns: 1fr; /* Mobile: 1 column */
 }
 
@@ -910,9 +917,40 @@ h2 {
 .project-card {
     position: relative;
     width: 100%;
-    overflow: hidden;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    z-index: 3;
+    /* border: 1px solid red; */
+    /* border-radius: 0; */
+    /* overflow: hidden; */
     /* height: 80%; */
+}
+
+.project-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0; 
+    width: 100%;
+    height: 100%;
+    /* background-color: white; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px;
+    border-radius: 0;
+    z-index: 2;
+    /* border: 1px solid rgb(0, 67, 2); */
+}
+
+
+
+.project-card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0%; 
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.05);
+    /* border-radius: 8%; */
+    z-index: 1;
+    /* border: 1px solid blue; */
 }
 
 
