--- a/css/style.css
+++ b/css/style.css
@@ -717,19 +717,191 @@ section {
 /* HERO SECTION for Homepage*/
 
 .hero {
-    background-color: transparent;
-    color: rgba(28, 61, 128, 0.8);
+    background-color: white;
     text-align: left;
     padding: 8em 4em;
-    margin-bottom: 8em;
+    /* margin-bottom: 4em; */
 }
 
-.hero h2 {
+.hero h1 {
     font-size: 4em;
     /* /* line-height: 1; */
     text-transform: uppercase;
-    margin: 0 auto; 
+    margin: 2 auto; 
+    text-align: center;
+    font-weight: 700;
+}
 
+.hero h1 em {
+    color: #b20e34;
+}
+
+.flower-hero1 {
+    animation: animflower1 5s linear infinite;
+    left: -6%;
+    bottom: 29%;
+    width: 10%;
+    height: auto;
+}
+@keyframes animflower1 {
+    0%{
+    opacity: 0;
+    transform: scale(0.1) rotate(0deg);
+    }
+    100%{
+    opacity: 100;
+    transform: scale(1) rotate(180deg);
+    }
+}
+
+.flower-hero2 {
+    animation: animflower2 4s linear infinite;
+    left: 23%;
+    bottom: 20%;
+    width: 10%;
+    height: auto;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower2 {
+    0%{
+    opacity: 0;
+    transform: scale(0.1) rotate(0deg);
+    }
+    100%{
+    opacity: 100;
+    transform: scale(1) rotate(-100deg);
+    }
+}
+
+.flower-hero3 {
+    animation: animflower3 4s linear infinite;
+    top: 8%;
+    left: auto;
+    right: 2%;
+    width: 19%;
+    height: auto;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower3 {
+    0%{
+    opacity: 0;
+    transform: scale(0.1) rotate(0deg);
+    }
+    100%{
+    opacity: 100;
+    transform: scale(0.3) rotate(-100deg);
+    }
+}
+
+.flower-hero4 {
+    animation: animflower4 4s linear infinite;
+    left: 20%;
+    top: 15%;
+    right: 6%;
+    bottom: auto;
+    width: 10%;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower4 {
+    0%{
+    opacity: 100;
+    transform: scale(1) rotate(0deg);
+    }
+    100%{
+    opacity: 0;
+    transform: scale(0.1) rotate(100deg);
+    }
+}
+
+.flower-hero5 {
+    animation: animflower5 4s linear infinite;
+    left: auto;
+    /* top: 20%; */
+    right: 37%;
+    bottom: 30%;
+    width: 15%;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower5 {
+    0%{
+    opacity: 100;
+    transform: scale(0.8) rotate(0deg);
+    }
+    100%{
+    opacity: 0;
+    transform: scale(0.3) rotate(90deg);
+    }
+}
+
+.flower-hero6 {
+    animation: animflower6 4s linear infinite;
+    left: auto;
+    top: 8%;
+    right: 30%;
+    /* bottom: 20%; */
+    width: 20%;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower6 {
+    0%{
+    opacity: 100;
+    transform: scale(0.1) rotate(0deg);
+    }
+    100%{
+    opacity: 0;
+    transform: scale(0.8) rotate(80deg);
+    }
+}
+
+.flower-hero7 {
+    animation: animflower7 6s linear infinite;
+    left: 70;
+    top: 4%;
+    right: 82%;
+    /* bottom: 30%; */
+    width: 30%;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower7 {
+    0%{
+    opacity: 0;
+    transform: scale(0.3) rotate(0deg);
+    }
+    100%{
+    opacity: 100;
+    transform: scale(0.5) rotate(-100deg);
+    }
+}
+
+.flower-hero8 {
+    animation: animflower8 4s linear infinite;
+    left: 80;
+    top: 50%;
+    right: 8%;
+    /* bottom: 30%; */
+    width: 15%;
+    position: absolute;
+    /* border: 3px solid red; */
+}
+@keyframes animflower8 {
+    0%{
+    opacity: 0;
+    transform: scale(0.3) rotate(0deg);
+    }
+    100%{
+    opacity: 100;
+    transform: scale(0.5) rotate(70deg);
+    }
+}
+
+
+/* 
     > span {
 		position: relative;
 		display: inline-block;
@@ -743,7 +915,6 @@ section {
 			animation: animateWords 10s infinite ease;
 		}
 	}
-}
 
 @keyframes animateWords {
 	0% {
@@ -810,7 +981,7 @@ h2 {
     max-width: 50em;
     margin: 1em auto;
     padding-bottom: 1em;
-}
+} */
 
 /* .cta-button {
     background-color: #36acf0; 
