--- a/css/style.css
+++ b/css/style.css
@@ -736,8 +736,35 @@ section {
     color: #b20e34;
 }
 
+
+/* .shine {
+  text-transform: uppercase;
+font-size: 1em;
+  letter-spacing: 4px;
+  overflow: hidden;
+background: linear-gradient(90deg, #b20e34, #fff, #b20e34);
+background-repeat: no-repeat;
+background-size: 80%;
+animation: animate 6s linear infinite;
+-webkit-background-clip: text;
+-webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+
+@keyframes animate {
+  0% {
+    background-position: -200%;
+}
+100% {
+    background-position: 500%;
+  }
+} */
+
+.flower-hero img {
+    opacity: 0;
+}
+
 .flower-hero1 {
-    animation: animflower1 5s linear infinite;
+    animation: animflower1 5s linear infinite 3s;
     left: -6%;
     bottom: 29%;
     width: 10%;
@@ -745,17 +772,22 @@ section {
 }
 @keyframes animflower1 {
     0%{
-    opacity: 0;
-    transform: scale(0.1) rotate(0deg);
+        opacity: 0;
+        scale:.1; 
+        rotate:0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 100;
-    transform: scale(1) rotate(180deg);
+        opacity: 0;
+        scale:1; 
+        rotate: 180deg;
     }
 }
 
 .flower-hero2 {
-    animation: animflower2 4s linear infinite;
+    animation: animflower2 8s linear infinite;
     left: 23%;
     bottom: 20%;
     width: 10%;
@@ -765,17 +797,22 @@ section {
 }
 @keyframes animflower2 {
     0%{
-    opacity: 0;
-    transform: scale(0.1) rotate(0deg);
+        opacity: 0;
+        scale:.1; 
+        rotate:0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 100;
-    transform: scale(1) rotate(-100deg);
+        opacity: 0;
+        scale: 1; 
+        rotate: -100deg;
     }
 }
 
 .flower-hero3 {
-    animation: animflower3 4s linear infinite;
+    animation: animflower3 6s linear infinite 1s;
     top: 8%;
     left: auto;
     right: 2%;
@@ -786,17 +823,22 @@ section {
 }
 @keyframes animflower3 {
     0%{
-    opacity: 0;
-    transform: scale(0.1) rotate(0deg);
+        opacity: 0;
+        scale:.1; 
+        rotate:0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 100;
-    transform: scale(0.3) rotate(-100deg);
+        opacity: 0;
+        scale: 0.8; 
+        rotate: -100deg;
     }
 }
 
 .flower-hero4 {
-    animation: animflower4 4s linear infinite;
+    animation: animflower4 6s linear infinite 2s;
     left: 20%;
     top: 15%;
     right: 6%;
@@ -807,17 +849,22 @@ section {
 }
 @keyframes animflower4 {
     0%{
-    opacity: 100;
-    transform: scale(1) rotate(0deg);
+        opacity: 0;
+        scale:1; 
+        rotate:0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 0;
-    transform: scale(0.1) rotate(100deg);
+        opacity: 0;
+        scale: 0.1; 
+        rotate: -180deg;
     }
 }
 
 .flower-hero5 {
-    animation: animflower5 4s linear infinite;
+    animation: animflower5 9s linear infinite;
     left: auto;
     /* top: 20%; */
     right: 37%;
@@ -828,17 +875,22 @@ section {
 }
 @keyframes animflower5 {
     0%{
-    opacity: 100;
-    transform: scale(0.8) rotate(0deg);
+        opacity: 1;
+        scale: 0.1; 
+        rotate: 0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 0;
-    transform: scale(0.3) rotate(90deg);
+        opacity: 0;
+        scale: 1; 
+        rotate: -180deg;
     }
 }
 
 .flower-hero6 {
-    animation: animflower6 4s linear infinite;
+    animation: animflower6 7s linear infinite 3s;
     left: auto;
     top: 8%;
     right: 30%;
@@ -849,12 +901,17 @@ section {
 }
 @keyframes animflower6 {
     0%{
-    opacity: 100;
-    transform: scale(0.1) rotate(0deg);
+        opacity: 0;
+        scale:1; 
+        rotate:0deg;
+    }
+    80%{
+        opacity: 1;
     }
     100%{
-    opacity: 0;
-    transform: scale(0.8) rotate(80deg);
+        opacity: 0;
+        scale: 0.1; 
+        rotate: -180deg;
     }
 }
 
@@ -880,7 +937,7 @@ section {
 }
 
 .flower-hero8 {
-    animation: animflower8 4s linear infinite;
+    animation: animflower8 9s linear infinite 3s;
     left: 80;
     top: 50%;
     right: 8%;
@@ -891,12 +948,17 @@ section {
 }
 @keyframes animflower8 {
     0%{
-    opacity: 0;
-    transform: scale(0.3) rotate(0deg);
+        opacity: 0;
+        scale: 1; 
+        rotate: 0deg;
+    }
+    80%{
+        opacity: 10.5;
     }
     100%{
-    opacity: 100;
-    transform: scale(0.5) rotate(70deg);
+        opacity: 1;
+        scale: 0.1; 
+        rotate: 180deg;
     }
 }
 
@@ -1304,10 +1366,11 @@ h3.project-type {
 
 .pele-icon {
     padding-bottom: 5px;
-    opacity: .3;
+    opacity: .4;
 }
-.project-meta-list li .pele {
-    color: red;
+
+.project-meta-list li.pele {
+    color: rgb(150, 150, 150);
 }
 
 
