--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,7 @@ section {
     background-color: white;
     text-align: left;
     padding: 8em 4em;
-    /* margin-bottom: 4em; */
+    margin-bottom: 2em;
 }
 
 .hero h1 {
