--- a/css/style.css
+++ b/css/style.css
@@ -764,7 +764,7 @@ animation: animate 6s linear infinite;
 }
 
 .flower-hero1 {
-    animation: animflower1 5s linear infinite 3s;
+    animation: animflower1 5s linear infinite;
     left: -6%;
     bottom: 29%;
     width: 10%;
@@ -776,8 +776,11 @@ animation: animate 6s linear infinite;
         scale:.1; 
         rotate:0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         opacity: 0;
@@ -801,8 +804,11 @@ animation: animate 6s linear infinite;
         scale:.1; 
         rotate:0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         opacity: 0;
@@ -812,7 +818,7 @@ animation: animate 6s linear infinite;
 }
 
 .flower-hero3 {
-    animation: animflower3 6s linear infinite 1s;
+    animation: animflower3 6s linear infinite;
     top: 8%;
     left: auto;
     right: 2%;
@@ -827,7 +833,12 @@ animation: animate 6s linear infinite;
         scale:.1; 
         rotate:0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
+        opacity: 0.7;
+    }80%{
         opacity: 1;
     }
     100%{
@@ -838,7 +849,7 @@ animation: animate 6s linear infinite;
 }
 
 .flower-hero4 {
-    animation: animflower4 6s linear infinite 2s;
+    animation: animflower4 6s linear infinite;
     left: 20%;
     top: 15%;
     right: 6%;
@@ -853,8 +864,11 @@ animation: animate 6s linear infinite;
         scale:1; 
         rotate:0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         opacity: 0;
@@ -879,8 +893,11 @@ animation: animate 6s linear infinite;
         scale: 0.1; 
         rotate: 0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         opacity: 0;
@@ -890,7 +907,7 @@ animation: animate 6s linear infinite;
 }
 
 .flower-hero6 {
-    animation: animflower6 7s linear infinite 3s;
+    animation: animflower6 7s linear infinite;
     left: auto;
     top: 8%;
     right: 30%;
@@ -905,8 +922,11 @@ animation: animate 6s linear infinite;
         scale:1; 
         rotate:0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 1;
+        opacity: 0.7;
     }
     100%{
         opacity: 0;
@@ -937,7 +957,7 @@ animation: animate 6s linear infinite;
 }
 
 .flower-hero8 {
-    animation: animflower8 9s linear infinite 3s;
+    animation: animflower8 9s linear infinite;
     left: 80;
     top: 50%;
     right: 8%;
@@ -952,8 +972,11 @@ animation: animate 6s linear infinite;
         scale: 1; 
         rotate: 0deg;
     }
+    40%{
+        opacity: 0.3;
+    }
     80%{
-        opacity: 10.5;
+        opacity: 0.7;
     }
     100%{
         opacity: 1;
