--- a/css/style.css
+++ b/css/style.css
@@ -533,7 +533,7 @@ main {
 	position: fixed;
 	width: 100%;
 	z-index: -1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 @media (min-width: 768px) {
@@ -551,7 +551,8 @@ main {
         height: 435px;
         position: fixed;
         width: 100%;
-        z-index: -1;
+        /* z-index: -1; */
+        /* overflow: hidden; */
     }
 }
 
